cli/testdata/scorecard/policy-library/policies/constraints/forbid_subnets.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: GCPAllowedResourceTypesConstraintV2
metadata:
  name: forbid-subnets
  annotations:
    description: Forbid compute subnets
spec:
  severity: high
  match:
    gcp:
      target: ["organization/*"]
  parameters:
    mode: "denylist"
    resource_type_list:
    - compute.googleapis.com/Subnetwork
