cli/testdata/scorecard/policy-library/policies/constraints/k8s_dump_review.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDumpReview
metadata:
  name: dump-review
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["*"]
