cli/testdata/scorecard/policy-library/policies/constraints/k8s_pod_image_pull_policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodImagePullPolicy
metadata:
  name: always-pull-image
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    policy: "Always"
