cli/testdata/scorecard/policy-library/policies/constraints/storage_blacklist_public.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: GCPStorageBucketWorldReadableConstraintV1
metadata:
  name: iam-gcs-blacklist-public-users
  annotations:
    description: Prevent public users from having access to resources via IAM
    bundles.validator.forsetisecurity.org/scorecard-v1: security
spec:
  match:
    ancestries: ["organizations/**"]
    excludedAncestries: [] # optional, default is no exclusions
  parameters: {}
