cli/testdata/scorecard/policy-library/policies/constraints/vpc_sc_ensure_services.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: GCPVPCSCEnsureServicesConstraintV1
metadata:
  name: vpc-sc-ensure-services
spec:
  match:
    ancestries: ["organizations/*"]
  parameters:
      required_services:
        - compute.googleapis.com
